[workspace]
members = ["jolt-sys", "jolt-samples"]

[package]
name = "jolt"
version = "0.1.0"
edition = "2021"
authors = ["cohaereo <cohaereo@protonmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.4.1"
mint = "0.5.9"
jolt-sys = { path = "./jolt-sys" }

[dev-dependencies]
glam = { version = "0.25.0", features = ["mint"] }
num_cpus = "1.16.0"
